DEV
---

- SeleniumTestCase now derived from StaticLiveServerTestCase.

0.1.0 (2015-09-03)
------------------

- Initial release